cabal-version:  2.4
name:           ReaCSS
version:        0.1.0.0
category:       Web
homepage:       https://github.com/ReaCSS/ReaCSS-replit#readme
bug-reports:    https://github.com/ReaCSS/ReaCSS-replit/issues
author:         Jaewon Seo
                Junyoung Clare Jang
maintainer:     jjc9310@gmail.com
copyright:      2020 JaewonSeo, Junyoung Clare Jang
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ReaCSS/ReaCSS-replit

library
  exposed-modules:
      Compiler.ReaXMLToECMA
      Data.ReaCSS
      Data.ReaXML
      Parser
      Parser.Lexer
      Parser.ReaCSS
      Parser.ReaXML
  other-modules:
      Paths_ReaCSS
  hs-source-dirs:
      src
  build-depends:
      base ^>= 4.12
    , megaparsec ^>= 8.0
    , mtl ^>= 2.2.2
    , parser-combinators ^>= 1.2.1
    , prettyprinter ^>= 1.7
  default-language: Haskell2010

executable ReaCSS
  main-is: Main.hs
  other-modules:
      Paths_ReaCSS
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ReaCSS
    , base ^>= 4.12
  default-language: Haskell2010

test-suite ReaCSS-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ReaCSS
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ReaCSS
    , base ^>= 4.12
    , bytestring ^>= 0.10.8.2
    , megaparsec ^>= 8.0
    , prettyprinter ^>= 1.7
    , tasty ^>= 1.3.1
    , tasty-golden ^>= 2.3.4
    , text ^>= 1.2.3.1
  default-language: Haskell2010
